--- a/backend/config.example.toml
+++ b/backend/config.example.toml
@@ -3,8 +3,10 @@
 [voting_service.web]
 host = "0.0.0.0"
 port = 8080
-read_timeout = 10
-shutdown_timeout = 5
+read_timeout = 5
+write_timeout = 10
+idle_timeout = 60
+
 
 [voting_service.db]
 dbname = "api_db"
