Add node packages

--- a/blockchain/Makefile
+++ b/blockchain/Makefile
@@ -3,3 +3,9 @@ up_blockchain:
 
 down_blockchain:
 	docker compose down
+
+
+install_hardhat:
+	npm install --save-dev hardhat
+	npm install @openzeppelin/contracts
+	npm install web3@latest
