Use hardhad lib

--- a/blockchain/Makefile
+++ b/blockchain/Makefile
@@ -9,3 +9,15 @@ install_hardhat:
 	npm install --save-dev hardhat
 	npm install @openzeppelin/contracts
 	npm install web3@latest
+
+init_hardhat_project:
+	npx hardhat
+
+hardhat_compile:
+	npx hardhat compile
+
+hardhat_node:
+	npx hardhat node
+
+run_contract:
+	npx hardhat run --network localhost scripts/voting_list_create.js
