--- a/blockchain/Makefile
+++ b/blockchain/Makefile
@@ -19,8 +19,17 @@ hardhat_compile:
 hardhat_node:
 	npx hardhat node
 
-hardhat_deploy:
-	npx hardhat run --network localhost scripts/voting_list.js
+hardhat_scripts_deploy:
+	npx hardhat run --network localhost scripts/deploy.js
+
+hardhat_scripts_create_voting:
+	npx hardhat run --network localhost scripts/createVoting.js
+
+hardhat_scripts_vote:
+	npx hardhat run --network localhost scripts/vote.js
+
+hardhat_scripts_delete_voting:
+	npx hardhat run --network localhost scripts/deleteVoting.js
 
 hardhat_test:
 	npx hardhat test
